Fix gird picker off screen positioning, and RTL positioning.

--- a/theme/blockly-core.less
+++ b/theme/blockly-core.less
@@ -14,6 +14,10 @@
 
 .blocklyGridPickerTooltip {
     z-index: 106 !important;
+    -webkit-user-select: none; /* Chrome, Opera, Safari */
+    -moz-user-select: none; /* Firefox 2+ */
+    -ms-user-select: none; /* IE 10+ */
+    user-select: none; /* Standard syntax */
 }
 
 .blocklyGridPickerPadder {
